hphp/test/zend/bad/ext-gd/imageistruecolor_error1.php
<?php
$image = imagecreatetruecolor(180, 30);
$resource = tmpfile();

imageistruecolor('string');
imageistruecolor($resource);
imageistruecolor(array());
?>